# micro_ocr

./: .pre-commit-config.yaml  README.md  pyproject.toml
micro_ocr/: fix_ocr_settings_module.py  hooks.py  inject_ui_button.py  modules.txt  setup_doctype.py
micro_ocr/doctype/invoice_recorder/: invoice_recorder.json  invoice_recorder.py  test_invoice_recorder.py
micro_ocr/micro_ocr/doctype/invoice_recorder/: invoice_recorder.js
